2014-07-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_tasks_ext): Add filter option.  Remove actions.

	* omp/omp.h (omp_get_tasks_opts_t): Add "filter" option.
	(omp_get_tasks_opts_defaults): Init filter.

2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvtis_remove): New function.

	* base/nvti.h: Add new function prototype.

	* base/nvticache.c (nvticache_get): Replace the old nvt entry when a
	duplicate OID is found and output a log message accordingly.

2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_shrink): Fix possible use-after free and double-free
	errors by nullifying the pointers after freeing the allocated memory.

2014-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (nasl_close_socket): Adjust check for file
	descriptor value. Update documentation to explain rationale.

2014-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c (open_SSL_connection, ovas_scanner_context_new): Don't
	call openvas_SSL_init anymore because it is already initialized by main
	process and does not need initialization again.
	(openvas_SSL_init): Drop the prevention to not execute gnutls_global_init
	twice because this function is called once only anyway.

2014-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c (log_message_gnutls): New callback function for
	DEBUG_SSL.
	(openvas_SSL_init): Added gnutls debugging for DEBUG_SSL.

2014-07-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c: Use OVAS_CONNECTION_FROM_FD() macro instead of
	accessing the connections array directly.

2014-07-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/arglists.h (struct arglist): Reorder struct elements to reduce
	space wasted on struct memory alignment. Reduces structure size from 48
	to 40 on x64.

2014-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
